--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/media.css">
   </head>
   <body>
     <!-- nav start -->
@@ -30,7 +31,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+        <i class="bi bi-list"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -140,7 +141,7 @@
     <!-- projects start  -->
     <div id="projects">
       <div class="container">
-        <div class="p-text d-flex align-items-center justify-content-between">
+        <div class="p-text d-lg-flex align-items-center justify-content-between">
           <h2>View our projects</h2>
           <a href="#"
             >View More <span><img src="images/Arrow 1 (1).png" alt="" /></span
