--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finsweet</title>
+    <link rel="icon" href="images/Logo .png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,22 +40,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">About Us</a>
+              <a class="nav-link" aria-current="page" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Features</a>
+              <a class="nav-link" aria-current="page" href="./feature.html">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Pricing</a>
+              <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Blog</a>
+              <a class="nav-link" aria-current="page" href="./blog-page.html">Blog</a>
             </li>
           </ul>
           <div>
@@ -168,7 +169,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-xl-4 right">
+          <div class="col-xl-4 d-flex flex-column justify-content-between align-items-center right">
             <div class="img2">
               <img src="images/Rectangle 1313.png" alt="" />
               <div class="pop2">
