--- a/feature.html
+++ b/feature.html
@@ -64,6 +64,255 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <!-- hero start -->
+      <div id="hero">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5">
+              <h1>All the features you need</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <button>View Pricing</button>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/Feature Hero Illustration.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- hero end -->
+      <!-- companies start -->
+      <div id="companies">
+        <div class="container d-flex justify-content-between">
+        <div class="users">
+          <h2>100.000+</h2>
+          <p>Finsweet Users</p>
+        </div>
+        <div class="logo d-flex justify-content-between align-items-center">
+          <img src="images/Logo 1.png" alt="#logo">
+          <img src="images/Logo 2.png" alt="#logo">
+          <img src="images/Logo 3.png" alt="#logo">
+          <img src="images/Logo 4.png" alt="#logo">
+          <img src="images/Logo 5.png" alt="#logo">
+        </div>
+      </div>
+      </div>
+      <!-- companies end -->
+      <!-- benifits start  -->
+      <div id="benifits">
+        <div class="container">
+          <h2>The benefits of working with us</h2>
+          <div class="row justify-content-between">
+            <div class="col-lg-4">
+              <img src="images/Icon (13).png" alt="#icon">
+              <h3>Customize with ease</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/Icon (13).png" alt="#icon">
+              <h3>Customize with ease</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/Icon (13).png" alt="#icon">
+              <h3>Customize with ease</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+            </div>
+          </div>
+        </div>
+      </div>      
+      <!-- benifits end  -->
+      <!-- user, client, suppor start  -->
+      <div id="support">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 d-flex flex-column justify-content-center left">
+              <p>Use Client-first </p>
+              <h2>Top agencies and freelancers around the world use 
+                Client-first </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            </div>
+            <div class="col-lg-5 right ms-auto">
+              <img src="images/man-explaining-problems-to-faceless-psychologist-7176030.png" alt="">
+            </div>
+          </div>
+        <div id="revision container-fluid">
+          <div class="row flex-row-reverse">
+            <div class="col-lg-6 d-flex flex-column justify-content-center left">
+              <p>Free Revision Rounds</p>
+              <h2>Get free Revisions and one week of free maintenance</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="col-lg-5 right me-auto">
+              <img src="images/photo-of-man-holding-a-book-927022.png" alt="#man">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 d-flex flex-column justify-content-center left">
+            <p>24/7 Support </p>
+            <h2>Working with us, you will be getting 24/7 priority support</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          </div>
+          <div class="col-lg-5 right ms-auto">
+            <img src="images/a-man-working-in-a-call-center-8867431.png" alt="#man">
+          </div>
+        </div>
+        <div id="delivery container-fluid">
+          <div class="row flex-row-reverse">
+            <div class="col-lg-6 d-flex flex-column justify-content-center left">
+              <p>Quick Delivery </p>
+              <h2>Guranteed 1 week delivery for standard five pager website</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="col-lg-5 right me-auto">
+              <img src="images/person-using-macbook-pro-3861964.png" alt="#macbook">
+            </div>
+          </div>
+        </div>
+      </div>
+        </div>
+      <!-- user, client, suppor end  -->
+      <!-- faq start  -->
+      <div id="faq">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 left">
+              <h2>Frequently asked questions</h2>
+              <a href="#">Contact us for more info</a>
+            </div>
+            <div class="col-lg-8 right">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseOne"
+                      aria-expanded="true"
+                      aria-controls="collapseOne"
+                    >
+                      <span>01</span>How much time does it take?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseOne"
+                    class="accordion-collapse collapse show"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseTwo"
+                      aria-expanded="false"
+                      aria-controls="collapseTwo"
+                    >
+                      <span>02</span>What is your class naming convention?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseTwo"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseThree"
+                      aria-expanded="false"
+                      aria-controls="collapseThree"
+                    >
+                      <span>03</span>How do you communicate?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseThree"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseFour"
+                      aria-expanded="false"
+                      aria-controls="collapseFour"
+                    >
+                      <span>04</span>I have a bigger project. Can you handle it?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseFour"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseFive"
+                      aria-expanded="false"
+                      aria-controls="collapseFive"
+                    >
+                      <span>05</span>What is your class naming convention?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseFive"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- faq end  -->
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
