--- a/work.html
+++ b/work.html
@@ -64,6 +64,80 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <!-- hero start  -->
+      <div id="hero">
+        <div class="container text-center">
+          <p>What we created</p>
+          <h1>Our Work Portfolio</h1>
+          <p class="p">We help teams create great digital products by providing them with tools and technology to make the design-to-code process universally accessible.</p>
+          <div class="icon">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-linkedin"></i>
+          </div>
+        </div>
+      </div>
+      <!-- hero end  -->
+      <!-- work start  -->
+      <div id="work">
+        <div class="container">
+          <ul class="d-flex align-items-center justify-content-center">
+            <li><a href="#">All</a></li>
+            <li><a href="#">Ui Design</a></li>
+            <li><a href="#">Webflow Design</a></li>
+            <li><a href="#">Figma Design</a></li>
+          </ul>
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="images/Image (1).png" alt="">
+              <h2>Template 1</h2>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
+              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/Image (2).png" alt="">
+              <h2>Template 2</h2>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
+              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/Image (3).png" alt="">
+              <h2>Template 3</h2>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
+              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/Image (4).png" alt="">
+              <h2>Template 4</h2>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
+              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/Image (5).png" alt="">
+              <h2>Template 5</h2>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
+              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/Image (6).png" alt="">
+              <h2>Template 6</h2>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
+              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- work end  -->
+      <!-- contact start  -->
+      <div id="contact">
+        <div class="container text-center">
+          <h2>Let's build something great together</h2>
+          <p>Nullam vitae purus at tortor mattis dapibus. Morbi purus est, ultricies nec dolor sit amet, scelerisque cursus purus.</p>
+          <button>Contact Us</button>
+        </div>
+      </div>
+      <!-- contact end  -->
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
