--- a/about-us.html
+++ b/about-us.html
@@ -64,6 +64,168 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <!-- hero start  -->
+      <div id="hero">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5 left">
+              <p>About us</p>
+              <h1>Our designs solve problems</h1>
+              <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="col-lg-5 ms-auto right">
+              <img src="images/group-of-people-sitting-indoors-3184360.png" alt="#group">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- hero end  -->
+      <!-- goal start--> 
+       <!-- || a small issue there in right section, it should me-auto   -->
+      <div id="goal">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5 mx-auto left">
+              <p>Who we are</p>
+              <h2>Goal focussed</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="col-lg-5 d-flex justify-content-end flex-column right">
+              <h2>Continuous improvement</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="col-12 img">
+              <img src="images/man-in-blue-jacket-looking-at-white-board-7413916.png" alt="#image">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- goal end  -->
+      <!-- process start  -->
+      <div id="process">
+        <div class="container">
+          <h2 class="text-center">The process we follow</h2>
+          <div class="row">
+            <div class="col-lg-3 item">
+              <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
+              <h3>Planning</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            </div>
+            <div class="col-lg-3 item">
+              <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
+              <h3>Planning</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            </div>
+            <div class="col-lg-3 item">
+              <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
+              <h3>Planning</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            </div>
+            <div class="col-lg-3 item">
+              <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
+              <h3>Planning</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- process end  -->
+      <!-- mission start  -->
+      <div id="mission">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 d-flex flex-column justify-content-center left">
+              <p>Our Mission </p>
+              <h2>Inspire, Innovate, Share</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="col-lg-5 right ms-auto">
+              <img src="images/a-man-standing-in-an-office-7792811.png" alt="">
+            </div>
+          </div>
+          <div class="row flex-row-reverse">
+            <div class="col-lg-6 d-flex flex-column justify-content-center left">
+              <p>Our Vision </p>
+              <h2>Laser focus</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="col-lg-5 right me-auto">
+              <img src="images/group-of-people-sitting-indoors-3184360.png" alt="#group">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- mission end  -->
+      <!-- benifits start  -->
+      <div id="benifits">
+        <div class="container">
+          <h2>The benefits of working with us</h2>
+          <div class="row justify-content-between">
+            <div class="col-lg-4">
+              <img src="images/Icon (13).png" alt="#icon">
+              <h3>Customize with ease</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/Icon (13).png" alt="#icon">
+              <h3>Customize with ease</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/Icon (13).png" alt="#icon">
+              <h3>Customize with ease</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- benifits end  -->
+      <!-- companies start  -->
+      <div id="companies">
+        <div class="container d-flex justify-content-between">
+        <div class="users">
+          <h2>100.000+</h2>
+          <p>Finsweet Users</p>
+        </div>
+        <div class="logo d-flex justify-content-between align-items-center">
+          <img src="images/Logo 1.png" alt="#logo">
+          <img src="images/Logo 2.png" alt="#logo">
+          <img src="images/Logo 3.png" alt="#logo">
+          <img src="images/Logo 4.png" alt="#logo">
+          <img src="images/Logo 5.png" alt="#logo">
+        </div>
+      </div>
+      </div>
+      <!-- companies end  -->
+      <!-- team start  -->
+      <div id="team">
+        <div class="container">
+          <h2 class="text-center">Meet our team</h2>
+          <div class="row justify-content-between">
+            <div class="col-lg-2 text-center">
+              <img src="images/man-in-black-suit-holding-a-calling-card-3785104.png" alt="#member">
+              <h3>John Smith</h3>
+              <p>CEO</p>
+            </div>
+            <div class="col-lg-2 text-center">
+              <img src="images/serious-man-3760373.png" alt="#member">
+              <h3>Simon Adams</h3>
+              <p>CTO</p>
+            </div>
+            <div class="col-lg-2  text-center">
+              <img src="images/man-in-white-shirt-wearing-blue-bucket-hat-6626874.png" alt="#member">
+              <h3>Paul Jones</h3>
+              <p>Design Lead</p>
+            </div>
+            <div class="col-lg-2 text-center">
+              <img src="images/transgender-model-touching-forehead-in-neon-light-7613875.png" alt="#member">
+              <h3>Sara Hardin</h3>
+              <p>Project Manager</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- team end  -->
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
