--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" aria-current="page" href="feature.html">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
+                <a class="nav-link active" aria-current="page" href="pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="feature.html">FAQ</a>
@@ -64,6 +64,207 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <!-- plans start  -->
+      <div id="plans">
+        <div class="container">
+          <div class="details mx-auto text-center">
+            <h1>Our Pricing Plans</h1>
+            <p>When you’re ready to go beyond prototyping in Figma, Webflow is ready to help you bring your designs to life — without coding them.</p>
+          </div>
+          <div class="row justify-content-between">
+            <div class="col-lg-4">
+              <div class="price d-flex">
+                <h2>$299</h2>
+                <p>Per Design</p>
+              </div>
+              <h3>Landing Page </h3>
+              <p>When you’re ready to go beyond prototyping in Figma, </p>
+              <ul>
+                <li>All limited links</li>
+                <li>Own analytics platform</li>
+                <li>Chat support</li>
+                <li>Optimize hashtags</li>
+                <li>Unlimited users</li>
+              </ul>
+              <button>Get Started</button>
+            </div>
+            <div class="col-lg-4">
+              <div class="price d-flex">
+                <h2>$299</h2>
+                <p>Per Design</p>
+              </div>
+              <h3>Landing Page </h3>
+              <p>When you’re ready to go beyond prototyping in Figma, </p>
+              <ul>
+                <li>All limited links</li>
+                <li>Own analytics platform</li>
+                <li>Chat support</li>
+                <li>Optimize hashtags</li>
+                <li>Unlimited users</li>
+              </ul>
+              <button>Get Started</button>
+            </div>
+            <div class="col-lg-4">
+              <div class="price d-flex">
+                <h2>$299</h2>
+                <p>Per Design</p>
+              </div>
+              <h3>Landing Page </h3>
+              <p>When you’re ready to go beyond prototyping in Figma, </p>
+              <ul>
+                <li>All limited links</li>
+                <li>Own analytics platform</li>
+                <li>Chat support</li>
+                <li>Optimize hashtags</li>
+                <li>Unlimited users</li>
+              </ul>
+              <button>Get Started</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- plans end  -->
+      <!-- faq start  -->
+      <div id="faq">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 left">
+              <h2>Frequently asked questions</h2>
+              <a href="#">Contact us for more info</a>
+            </div>
+            <div class="col-lg-8 right">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseOne"
+                      aria-expanded="true"
+                      aria-controls="collapseOne"
+                    >
+                      <span>01</span>How much time does it take?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseOne"
+                    class="accordion-collapse collapse show"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseTwo"
+                      aria-expanded="false"
+                      aria-controls="collapseTwo"
+                    >
+                      <span>02</span>What is your class naming convention?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseTwo"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseThree"
+                      aria-expanded="false"
+                      aria-controls="collapseThree"
+                    >
+                      <span>03</span>How do you communicate?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseThree"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseFour"
+                      aria-expanded="false"
+                      aria-controls="collapseFour"
+                    >
+                      <span>04</span>I have a bigger project. Can you handle it?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseFour"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseFive"
+                      aria-expanded="false"
+                      aria-controls="collapseFive"
+                    >
+                      <span>05</span>What is your class naming convention?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseFive"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- faq end  -->
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
