--- a/blog-page.html
+++ b/blog-page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
-  <link rel="icon" href="images/Logo .png" type="image/x-icon">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -64,6 +64,120 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <!-- case study start  -->
+      <div id="study">
+        <div class="container text-center">
+          <h1>A UX Case Study on Creating a Studious Environment for Students</h1>
+          <p>Andrew Jonson <b>Posted on 27th January 2021</b></p>
+          <img src="images/people-working-in-front-of-computer-3182763.png" alt="#study">
+          <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+      <!-- case study end  -->
+      <div id="blog">
+        <div class="container">
+          <h2 class="text-center">Our Blog</h2>
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="images/photo-of-people-using-laptops-3182833.png" alt="" />
+              <div class="blog-details">
+                <p>27 Jan 2021</p>
+                <h2>
+                  How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                </h2>
+                <p class="p">
+                  See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                </p>
+                <a href="#"
+                  >Read More
+                  <span><img src="images/Arrow 1 (1).png" alt="" /></span
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/side-view-photo-of-smiling-woman-in-a-black-and-white-striped-top-sitting-on-a-bed-while-using-a-laptop-3765035.png" alt="" />
+              <div class="blog-details">
+                <p>27 Jan 2021</p>
+                <h2>
+                  How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                </h2>
+                <p class="p">
+                  See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                </p>
+                <a href="#"
+                  >Read More
+                  <span><img src="images/Arrow 1 (1).png" alt="" /></span
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/top-view-photo-of-people-having-a-meeting-3182822.png" alt="" />
+              <div class="blog-details">
+                <p>27 Jan 2021</p>
+                <h2>
+                  How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                </h2>
+                <p class="p">
+                  See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                </p>
+                <a href="#"
+                  >Read More
+                  <span><img src="images/Arrow 1 (1).png" alt="" /></span
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/top-view-photo-of-people-having-a-meeting-3182822.png" alt="" />
+              <div class="blog-details">
+                <p>27 Jan 2021</p>
+                <h2>
+                  How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                </h2>
+                <p class="p">
+                  See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                </p>
+                <a href="#"
+                  >Read More
+                  <span><img src="images/Arrow 1 (1).png" alt="" /></span
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/man-wearing-red-crew-neck-shirt-1125028.png" alt="" />
+              <div class="blog-details">
+                <p>27 Jan 2021</p>
+                <h2>
+                  How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                </h2>
+                <p class="p">
+                  See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                </p>
+                <a href="#"
+                  >Read More
+                  <span><img src="images/Arrow 1 (1).png" alt="" /></span
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img src="images/group-of-person-sitting-indoors-3184306.png" alt="" />
+              <div class="blog-details">
+                <p>27 Jan 2021</p>
+                <h2>
+                  How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                </h2>
+                <p class="p">
+                  See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                </p>
+                <a href="#"
+                  >Read More
+                  <span><img src="images/Arrow 1 (1).png" alt="" /></span
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
