--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
-  <link rel="icon" href="images/Logo .png" type="image/x-icon">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -64,6 +64,39 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <div id="form">
+        <div class="container">
+          <h1 class="text-center">Contact Us</h1>
+          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+          <div class="row justify-content-center">
+            <div class="col-10">
+              <div class="row justify-content-center">
+                <div class="col-lg-5 d-flex flex-column">
+                  <label for="name">Name</label>
+                  <input type="name" placeholder="Enter Your Name">
+                </div>
+                <div class="col-lg-5 d-flex flex-column">
+                  <label for="name">Name</label>
+                  <input type="name" placeholder="Enter Your Email">
+                </div>
+                <div class="col-lg-5 d-flex flex-column">
+                  <label for="name">Name</label>
+                  <input type="name" placeholder="Provide Contact">
+                </div>
+                <div class="col-lg-5 d-flex flex-column">
+                  <label for="name">Name</label>
+                  <input type="name" placeholder="Select Subject">
+                </div>
+                <div class="col-lg-10 d-flex flex-column">
+                  <label for="message">Message</label>
+                  <input type="text" placeholder="Write your question here">
+                  <button>Send Message</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
