--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
-  <link rel="icon" href="images/Logo .png" type="image/x-icon">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -93,13 +93,13 @@
               <img src="images/Image (1).png" alt="">
               <h2>Template 1</h2>
               <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
-              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+              <a href="./read-case-studies.html">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
             </div>
             <div class="col-lg-6">
               <img src="images/Image (2).png" alt="">
               <h2>Template 2</h2>
               <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.</p>
-              <a href="#">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
+              <a href="./read-case-studies.html">View Portfolio <span><img src="images/Arrow 1 (1).png" alt="#arrow"></span></a>
             </div>
             <div class="col-lg-6">
               <img src="images/Image (3).png" alt="">
