--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finsweet</title>
-    <link rel="icon" href="images/Logo .png" type="image/x-icon">
+    <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -52,14 +52,14 @@
               <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">FAQ</a>
+              <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="./blog-page.html">Blog</a>
             </li>
           </ul>
           <div>
-            <button class="btn" type="submit">Contact us</button>
+            <button class="btn" type="submit"><a href="./contact-us.html">Contact us</a></button>
           </div>
         </div>
       </div>
@@ -76,8 +76,8 @@
               eiusmod tempor incididunt.
             </p>
             <div class="buttons">
-              <button>View our work</button>
-              <a href="#"
+              <button><a href="./work.html">View our work</a></button>
+              <a href="./pricing.html"
                 >View Pricing
                 <span><img src="images/Arrow 1.png" alt="#arrow" /></span
               ></a>
