--- a/read-case-studies.html
+++ b/read-case-studies.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
-  <link rel="icon" href="images/Logo .png" type="image/x-icon">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">About Us</a>
@@ -64,6 +64,100 @@
         </div>
       </nav>
       <!-- nav end  -->
+      <!-- details start  -->
+      <div id="details">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-11 ms-auto">
+              <h4>Web design and development</h4>
+              <h1>Finsweet Design case studies</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+            </div>
+            <div class="col-lg-10 mx-auto">
+              <img src="images/Main image.png" alt="#main">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10 mx-auto">
+              <div class="row justify-content-between">
+                <div class="col-lg-2">
+                  <p>Client</p>
+                  <h5>facebook.com</h5>
+                </div>
+                <div class="col-lg-2">
+                  <p>Service</p>
+                  <h5>Product Design</h5>
+                </div>
+                <div class="col-lg-4">
+                  <p>Deliverable</p>
+                  <h5>UI Screens, UX Flow & Prototype</h5>
+                </div>
+                <hr>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- details end  -->
+      <!-- about start  -->
+      <div id="about">
+        <div class="container">
+          <div class="row">
+            <div class="col-8 mx-auto">
+              <div class="about">
+                <h2>About the project</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                  <li>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</li>
+                  <li>Duis aute irure dolor in reprehenderit in voluptate velit esse</li>
+                  <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa</li>
+                </ul>
+              </div>
+              <img src="images/Group 2508.png" alt="#group">
+              <div class="work">
+                <h2>How we do it</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                  <li>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</li>
+                  <li>Duis aute irure dolor in reprehenderit in voluptate velit esse</li>
+                  <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- about end  -->
+      <!-- keyword start  -->
+      <div id="keyword">
+        <div class="container">
+          <div class="row">
+            <div class="col-10 mx-auto">
+              <ul class="d-flex justify-content-between">
+                <li>Keywords</li>
+                <li>Design</li>
+                <li>UI/UX</li>
+                <li>Wireframing</li>
+                <li>Branding</li>
+                <li>Development</li>
+                <li>webflow</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- keyword end  -->
+      <!-- together start  -->
+      <div id="together">
+        <div class="container text-center">
+          <h2>Let's build something great together</h2>
+          <p>Nullam vitae purus at tortor mattis dapibus. Morbi purus est, ultricies nec dolor sit amet, scelerisque cursus purus.</p>
+          <button><a href="./contact-us.html">Contact Us</a></button>
+        </div>
+      </div>
+      <!-- together end  -->
       <!-- footer start  -->
     <div id="footer">
       <div class="container">
